deps/v8/test/message/fail/modules-import-redeclare2.out
*%(basename)s:6: SyntaxError: Identifier 'x' has already been declared
import {y, x, z} from "modules-import-redeclare1.mjs";
           ^
SyntaxError: Identifier 'x' has already been declared

